Change to v1.8.0 and fix a few minor bugs